@@ -1,3 +1,8 @@
+2006-08-18  Emmanuel Dreyfus  <manu@netbsd.org>
+
+	From Matthew Grooms:
+	* src/racoon/isakmp.c: handle IKE frag used in the first packet.
+
 2006-08-16  Emmanuel Dreyfus  <manu@netbsd.org>
 
 	From Matthew Grooms:
